Comprehensive check in.