@@ -47,154 +47,154 @@ import org.elbe.relations.internal.utility.FormUtility;
  */
 @SuppressWarnings("restriction")
 class StyledFieldHelper {
-	private static final Display display = Display.getCurrent();
-	private static final Color BLUE = display.getSystemColor(SWT.COLOR_BLUE);
-	private static final Color BLACK = display.getSystemColor(SWT.COLOR_BLACK);
-	private static final Color WHITE = display.getSystemColor(SWT.COLOR_WHITE);
-	private static final Color GRAY = display
-	        .getSystemColor(SWT.COLOR_WIDGET_BACKGROUND);
-	private static final Cursor HAND_CURSOR = new Cursor(display,
-	        SWT.CURSOR_HAND);
+    private static final Display display = Display.getCurrent();
+    private static final Color BLUE = display.getSystemColor(SWT.COLOR_BLUE);
+    private static final Color BLACK = display.getSystemColor(SWT.COLOR_BLACK);
+    private static final Color WHITE = display.getSystemColor(SWT.COLOR_WHITE);
+    private static final Color GRAY = display
+            .getSystemColor(SWT.COLOR_WIDGET_BACKGROUND);
+    private static final Cursor HAND_CURSOR = new Cursor(display,
+            SWT.CURSOR_HAND);
 
-	private static final int CTRL = new Integer(SWT.CTRL);
+    private static final int CTRL = Integer.valueOf(SWT.CTRL);
 
-	private final MouseListener mouseClickListener = new MouseAdapter() {
-		@Override
-		public void mouseDown(final MouseEvent inEvent) {
-			if (!textIsURL()) {
-				return;
-			}
-			if ((inEvent.stateMask & CTRL) != 0) {
-				BrowserUtil.startBrowser(getTextWidget().getText());
-			}
-		}
-	};
-	private final MouseTrackListener mouseTrackListener = new MouseTrackAdapter() {
-		@Override
-		public void mouseEnter(final MouseEvent inEvent) {
-			if (!textIsURL()) {
-				return;
-			}
-			if ((inEvent.stateMask & CTRL) != 0) {
-				getTextWidget().setStyleRange(getClickRange());
-				getTextWidget().setCursor(HAND_CURSOR);
-				decoration.show();
-			}
-		}
+    private final MouseListener mouseClickListener = new MouseAdapter() {
+        @Override
+        public void mouseDown(final MouseEvent inEvent) {
+            if (!textIsURL()) {
+                return;
+            }
+            if ((inEvent.stateMask & CTRL) != 0) {
+                BrowserUtil.startBrowser(getTextWidget().getText());
+            }
+        }
+    };
+    private final MouseTrackListener mouseTrackListener = new MouseTrackAdapter() {
+        @Override
+        public void mouseEnter(final MouseEvent inEvent) {
+            if (!textIsURL()) {
+                return;
+            }
+            if ((inEvent.stateMask & CTRL) != 0) {
+                getTextWidget().setStyleRange(getClickRange());
+                getTextWidget().setCursor(HAND_CURSOR);
+                StyledFieldHelper.this.decoration.show();
+            }
+        }
 
-		@Override
-		public void mouseExit(final MouseEvent inEvent) {
-			if (!textIsURL()) {
-				return;
-			}
-			if ((inEvent.stateMask & CTRL) != 0) {
-				getTextWidget().setStyleRange(getNormalRange());
-				getTextWidget().setCursor(oldCursor);
-				decoration.hide();
-			}
-		};
+        @Override
+        public void mouseExit(final MouseEvent inEvent) {
+            if (!textIsURL()) {
+                return;
+            }
+            if ((inEvent.stateMask & CTRL) != 0) {
+                getTextWidget().setStyleRange(getNormalRange());
+                getTextWidget().setCursor(StyledFieldHelper.this.oldCursor);
+                StyledFieldHelper.this.decoration.hide();
+            }
+        };
 
-		@Override
-		public void mouseHover(final MouseEvent inEvent) {
-			if (!textIsURL()) {
-				return;
-			}
-			if ((inEvent.stateMask & CTRL) != 0) {
-				getTextWidget().setStyleRange(getClickRange());
-				getTextWidget().setCursor(HAND_CURSOR);
-			} else {
-				getTextWidget().setStyleRange(getNormalRange());
-				getTextWidget().setCursor(oldCursor);
-			}
-		};
-	};
-	private final MouseMoveListener mouseMoveListener = new MouseMoveListener() {
-		@Override
-		public void mouseMove(final MouseEvent inEvent) {
-			if (!textIsURL()) {
-				return;
-			}
-			if ((inEvent.stateMask & CTRL) != 0) {
-				getTextWidget().setStyleRange(getClickRange());
-				getTextWidget().setCursor(HAND_CURSOR);
-			} else {
-				getTextWidget().setStyleRange(getNormalRange());
-				getTextWidget().setCursor(oldCursor);
-			}
-		}
-	};
+        @Override
+        public void mouseHover(final MouseEvent inEvent) {
+            if (!textIsURL()) {
+                return;
+            }
+            if ((inEvent.stateMask & CTRL) != 0) {
+                getTextWidget().setStyleRange(getClickRange());
+                getTextWidget().setCursor(HAND_CURSOR);
+            } else {
+                getTextWidget().setStyleRange(getNormalRange());
+                getTextWidget().setCursor(StyledFieldHelper.this.oldCursor);
+            }
+        };
+    };
+    private final MouseMoveListener mouseMoveListener = new MouseMoveListener() {
+        @Override
+        public void mouseMove(final MouseEvent inEvent) {
+            if (!textIsURL()) {
+                return;
+            }
+            if ((inEvent.stateMask & CTRL) != 0) {
+                getTextWidget().setStyleRange(getClickRange());
+                getTextWidget().setCursor(HAND_CURSOR);
+            } else {
+                getTextWidget().setStyleRange(getNormalRange());
+                getTextWidget().setCursor(StyledFieldHelper.this.oldCursor);
+            }
+        }
+    };
 
-	private final FocusListener focusListener = new FocusAdapter() {
-		@Override
-		public void focusGained(final FocusEvent inEvent) {
-			decoration.hide();
-		}
-	};
+    private final FocusListener focusListener = new FocusAdapter() {
+        @Override
+        public void focusGained(final FocusEvent inEvent) {
+            StyledFieldHelper.this.decoration.hide();
+        }
+    };
 
-	private final StyledText journalText;
-	private final Cursor oldCursor;
-	private final ControlDecoration decoration;
+    private final StyledText journalText;
+    private final Cursor oldCursor;
+    private final ControlDecoration decoration;
 
-	/**
-	 * Friendly constructor
-	 *
-	 * @param inText
-	 *            {@link StyledText} the widget this class is handling.
-	 * @param inLog
-	 *            {@link Logger}
-	 */
-	StyledFieldHelper(final StyledText inText, final Logger inLog) {
-		journalText = inText;
-		decoration = FormUtility.addDecorationInfo(inText,
-		        RelationsMessages.getString("StyledFieldHelper.info")); //$NON-NLS-1$
-		oldCursor = journalText.getCursor();
-	}
+    /**
+     * Friendly constructor
+     *
+     * @param inText
+     *            {@link StyledText} the widget this class is handling.
+     * @param inLog
+     *            {@link Logger}
+     */
+    StyledFieldHelper(final StyledText inText, final Logger inLog) {
+        this.journalText = inText;
+        this.decoration = FormUtility.addDecorationInfo(inText,
+                RelationsMessages.getString("StyledFieldHelper.info")); //$NON-NLS-1$
+        this.oldCursor = this.journalText.getCursor();
+    }
 
-	private StyledText getTextWidget() {
-		return journalText;
-	}
+    private StyledText getTextWidget() {
+        return this.journalText;
+    }
 
-	private StyleRange createRange() {
-		final StyleRange outRange = new StyleRange();
-		outRange.start = 0;
-		outRange.length = getTextWidget().getText().length();
-		return outRange;
-	}
+    private StyleRange createRange() {
+        final StyleRange outRange = new StyleRange();
+        outRange.start = 0;
+        outRange.length = getTextWidget().getText().length();
+        return outRange;
+    }
 
-	private StyleRange getClickRange() {
-		final StyleRange outRange = createRange();
-		outRange.underline = true;
-		outRange.foreground = BLUE;
-		return outRange;
-	}
+    private StyleRange getClickRange() {
+        final StyleRange outRange = createRange();
+        outRange.underline = true;
+        outRange.foreground = BLUE;
+        return outRange;
+    }
 
-	private StyleRange getNormalRange() {
-		final StyleRange outRange = createRange();
-		outRange.underline = false;
-		outRange.foreground = BLACK;
-		return outRange;
-	}
+    private StyleRange getNormalRange() {
+        final StyleRange outRange = createRange();
+        outRange.underline = false;
+        outRange.foreground = BLACK;
+        return outRange;
+    }
 
-	private boolean textIsURL() {
-		return BrowserUtil.textIsURL(getTextWidget().getText());
-	}
+    private boolean textIsURL() {
+        return BrowserUtil.textIsURL(getTextWidget().getText());
+    }
 
-	void addListeners() {
-		getTextWidget().addMouseListener(mouseClickListener);
-		getTextWidget().addMouseTrackListener(mouseTrackListener);
-		getTextWidget().addMouseMoveListener(mouseMoveListener);
-		getTextWidget().removeFocusListener(focusListener);
-	}
+    void addListeners() {
+        getTextWidget().addMouseListener(this.mouseClickListener);
+        getTextWidget().addMouseTrackListener(this.mouseTrackListener);
+        getTextWidget().addMouseMoveListener(this.mouseMoveListener);
+        getTextWidget().removeFocusListener(this.focusListener);
+    }
 
-	void removeListeners() {
-		getTextWidget().removeMouseListener(mouseClickListener);
-		getTextWidget().removeMouseTrackListener(mouseTrackListener);
-		getTextWidget().removeMouseMoveListener(mouseMoveListener);
-		getTextWidget().addFocusListener(focusListener);
-	}
+    void removeListeners() {
+        getTextWidget().removeMouseListener(this.mouseClickListener);
+        getTextWidget().removeMouseTrackListener(this.mouseTrackListener);
+        getTextWidget().removeMouseMoveListener(this.mouseMoveListener);
+        getTextWidget().addFocusListener(this.focusListener);
+    }
 
-	void setEditable(final boolean inEditable) {
-		getTextWidget().setEnabled(inEditable);
-		getTextWidget().setBackground(inEditable ? WHITE : GRAY);
-	}
+    void setEditable(final boolean inEditable) {
+        getTextWidget().setEnabled(inEditable);
+        getTextWidget().setBackground(inEditable ? WHITE : GRAY);
+    }
 }
