@@ -1,6 +1,6 @@
 /***************************************************************************
  * This package is part of Relations application.
- * Copyright (C) 2004-2013, Benno Luthiger
+ * Copyright (C) 2004-2025, Benno Luthiger
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public
@@ -18,8 +18,6 @@
  ***************************************************************************/
 package org.elbe.relations.internal.style;
 
-import javax.inject.Inject;
-
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
 import org.eclipse.e4.core.di.annotations.Optional;
 import org.eclipse.e4.core.di.extensions.Preference;
@@ -34,49 +32,44 @@ import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Control;
 import org.elbe.relations.RelationsConstants;
 
-import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
 
-/**
- * Displays the combo to resize the font size.<br />
+/** Displays the combo to resize the font size.<br>
  * Instances of this class have to react on changes of the font size preference
- * <code>RelationsConstants.KEY_TEXT_FONT_SIZE</code>, e.g. made through the
- * PreferenceDialog. On the other side, changes made through this combo have to
- * be stored in the applications preferences.
+ * <code>RelationsConstants.KEY_TEXT_FONT_SIZE</code>, e.g. made through the PreferenceDialog. On the other side,
+ * changes made through this combo have to be stored in the applications preferences.
  *
- * @author Luthiger
- */
-@SuppressWarnings("restriction")
+ * @author Luthiger */
 public class ResizeFontControl {
     private Combo combo;
-    private int initIndex = findIndexOf(Integer
-            .toString(RelationsConstants.DFT_TEXT_FONT_SIZE));
+    private int initIndex = findIndexOf(Integer.toString(RelationsConstants.DFT_TEXT_FONT_SIZE));
 
     @Inject
-    @Preference(nodePath = RelationsConstants.PREFERENCE_NODE)
-    private IEclipsePreferences preferences;
+    public void createWidget(
+            @Preference(nodePath = RelationsConstants.PREFERENCE_NODE) final IEclipsePreferences preferences,
+            final Composite parent) {
+        this.combo = new Combo(parent, SWT.DROP_DOWN);
+        // this.combo.setLayoutData(GridDataFactory.fillDefaults().hint(SWT.DEFAULT, 8).create());
 
-    @PostConstruct
-    public void createWidget(final Composite inParent) {
-        this.combo = new Combo(inParent, SWT.DROP_DOWN);
         this.combo.addSelectionListener(new SelectionListener() {
             @Override
-            public void widgetDefaultSelected(final SelectionEvent inEvent) {
-                handleWidgetSelected();
+            public void widgetDefaultSelected(final SelectionEvent event) {
+                handleWidgetSelected(preferences);
             }
 
             @Override
-            public void widgetSelected(final SelectionEvent inEvent) {
-                handleWidgetSelected();
+            public void widgetSelected(final SelectionEvent event) {
+                handleWidgetSelected(preferences);
             }
         });
         this.combo.addFocusListener(new FocusListener() {
             @Override
-            public void focusGained(final FocusEvent inEvent) {
+            public void focusGained(final FocusEvent event) {
                 // do nothing
             }
 
             @Override
-            public void focusLost(final FocusEvent inEvent) {
+            public void focusLost(final FocusEvent event) {
                 // refresh();
             }
         });
@@ -86,38 +79,33 @@ public class ResizeFontControl {
         this.combo.setEnabled(false);
     }
 
-    private void handleWidgetSelected() {
-        Integer lFontSize = null;
+    private void handleWidgetSelected(final IEclipsePreferences preferences) {
         try {
-            lFontSize = new Integer(this.combo.getText());
-        }
-        catch (final NumberFormatException exc) {
+            final Integer fontSize = Integer.valueOf(this.combo.getText());
+            preferences.putInt(RelationsConstants.KEY_TEXT_FONT_SIZE, fontSize);
+        } catch (final NumberFormatException exc) {
             // intentionally left empty
         }
-        if (lFontSize != null) {
-            this.preferences.putInt(RelationsConstants.KEY_TEXT_FONT_SIZE,
-                    lFontSize.intValue());
-        }
     }
 
-    private void setValue(final String inValue) {
-        final int lIndex = findIndexOf(inValue);
+    private void setValue(final String value) {
+        final int index = findIndexOf(value);
         if (this.combo != null && !this.combo.isDisposed()) {
-            if (lIndex >= 0) {
-                this.combo.select(lIndex);
+            if (index >= 0) {
+                this.combo.select(index);
             } else {
-                this.combo.setText(inValue);
+                this.combo.setText(value);
             }
         } else {
-            if (lIndex >= 0) {
-                this.initIndex = lIndex;
+            if (index >= 0) {
+                this.initIndex = index;
             }
         }
     }
 
-    private int findIndexOf(final String inText) {
+    private int findIndexOf(final String text) {
         for (int i = 0; i < RelationsConstants.INIT_SIZES.length; i++) {
-            if (RelationsConstants.INIT_SIZES[i].equalsIgnoreCase(inText)) {
+            if (RelationsConstants.INIT_SIZES[i].equalsIgnoreCase(text)) {
                 return i;
             }
         }
@@ -126,16 +114,16 @@ public class ResizeFontControl {
 
     @Inject
     public void setFontSize(
-            @Preference(nodePath = RelationsConstants.PREFERENCE_NODE, value = RelationsConstants.KEY_TEXT_FONT_SIZE) final String inFontSize) {
-        setValue(inFontSize);
+            @Preference(nodePath = RelationsConstants.PREFERENCE_NODE, value = RelationsConstants.KEY_TEXT_FONT_SIZE) final String fontSize) {
+        setValue(fontSize);
     }
 
     @Inject
     @Optional
     public void updateEnablement(
-            @UIEventTopic(RelationsConstants.TOPIC_STYLE_ITEMS_FORM) final Boolean inEnable) {
+            @UIEventTopic(RelationsConstants.TOPIC_STYLE_ITEMS_FORM) final Boolean enable) {
         if (this.combo != null && !this.combo.isDisposed() && !this.combo.isFocusControl()) {
-            this.combo.setEnabled(inEnable.booleanValue());
+            this.combo.setEnabled(enable.booleanValue());
         }
     }
 
