@@ -21,8 +21,6 @@ package org.elbe.relations.internal.wizards;
 import java.util.ArrayList;
 import java.util.Collection;
 
-import javax.inject.Inject;
-
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
@@ -51,6 +49,8 @@ import org.elbe.relations.utility.DialogSettingHandler;
 import org.osgi.framework.FrameworkUtil;
 import org.osgi.service.prefs.BackingStoreException;
 
+import jakarta.inject.Inject;
+
 /**
  * Wizard part to collect the information for content print out.
  *
@@ -58,357 +58,357 @@ import org.osgi.service.prefs.BackingStoreException;
  */
 @SuppressWarnings("restriction")
 public class PrintOutWizardPage extends ExportWizardPage {
-	public final static int SELECTED_ONLY = 0;
-	public final static int SELECTED_RELATED = 1;
-	public final static int SELECTED_WHOLE = 2;
-	public final static int PROCESS_APPEND = 0;
-	public final static int PROCESS_NEW = 1;
+    public final static int SELECTED_ONLY = 0;
+    public final static int SELECTED_RELATED = 1;
+    public final static int SELECTED_WHOLE = 2;
+    public final static int PROCESS_APPEND = 0;
+    public final static int PROCESS_NEW = 1;
 
-	private static final String DIALOG_SECTION = "RelationsPrint"; //$NON-NLS-1$
-	private static final String DIALOG_TERM = "RecentRelationsPrint"; //$NON-NLS-1$
+    private static final String DIALOG_SECTION = "RelationsPrint"; //$NON-NLS-1$
+    private static final String DIALOG_TERM = "RecentRelationsPrint"; //$NON-NLS-1$
 
-	@Inject
-	private PrintServiceController printManager;
+    @Inject
+    private PrintServiceController printManager;
 
-	@Inject
-	private PrintOutManager printOutManager;
+    @Inject
+    private PrintOutManager printOutManager;
 
-	@Inject
-	@Preference(nodePath = RelationsConstants.PREFERENCE_NODE)
-	private IEclipsePreferences preferences;
+    @Inject
+    @Preference(nodePath = RelationsConstants.PREFERENCE_NODE)
+    private IEclipsePreferences preferences;
 
-	@Inject
-	private Logger log;
+    @Inject
+    private Logger log;
 
-	private final DialogSettingHandler settings;
-	public Combo printType;
-	public Combo printFileName;
-	private Button printOutReferences;
+    private final DialogSettingHandler settings;
+    public Combo printType;
+    public Combo printFileName;
+    private Button printOutReferences;
 
-	private static final Integer[] radioScopeIDs = new Integer[] {
-	        new Integer(SELECTED_ONLY), new Integer(SELECTED_RELATED),
-	        new Integer(SELECTED_WHOLE) };
-	private static final String[] radioScopeLabels = new String[] {
-	        RelationsMessages.getString("PrintOutWizardPage.scope.1"), //$NON-NLS-1$
-	        RelationsMessages.getString("PrintOutWizardPage.scope.2"), //$NON-NLS-1$
-	        RelationsMessages.getString("PrintOutWizardPage.scope.3") }; //$NON-NLS-1$
-	private int selectedScope = SELECTED_RELATED;
+    private static final Integer[] radioScopeIDs = new Integer[] {
+            Integer.valueOf(SELECTED_ONLY), Integer.valueOf(SELECTED_RELATED),
+            Integer.valueOf(SELECTED_WHOLE) };
+    private static final String[] radioScopeLabels = new String[] {
+            RelationsMessages.getString("PrintOutWizardPage.scope.1"), //$NON-NLS-1$
+            RelationsMessages.getString("PrintOutWizardPage.scope.2"), //$NON-NLS-1$
+            RelationsMessages.getString("PrintOutWizardPage.scope.3") }; //$NON-NLS-1$
+    private int selectedScope = SELECTED_RELATED;
 
-	private static final Integer[] radioProcessIds = new Integer[] {
-	        new Integer(PROCESS_APPEND), new Integer(PROCESS_NEW) };
-	private static final String[] radioProcessLabels = new String[] {
-	        RelationsMessages.getString("PrintOutWizardPage.lbl.further"), //$NON-NLS-1$
-	        RelationsMessages.getString("PrintOutWizardPage.lbl.new") }; //$NON-NLS-1$
-	private int selectedProcess = PROCESS_APPEND;
+    private static final Integer[] radioProcessIds = new Integer[] {
+            Integer.valueOf(PROCESS_APPEND), Integer.valueOf(PROCESS_NEW) };
+    private static final String[] radioProcessLabels = new String[] {
+            RelationsMessages.getString("PrintOutWizardPage.lbl.further"), //$NON-NLS-1$
+            RelationsMessages.getString("PrintOutWizardPage.lbl.new") }; //$NON-NLS-1$
+    private int selectedProcess = PROCESS_APPEND;
 
-	private String actualFileName = ""; //$NON-NLS-1$
+    private String actualFileName = ""; //$NON-NLS-1$
 
-	private final Collection<Control> controls1 = new ArrayList<Control>();
-	private final Collection<Control> controls2 = new ArrayList<Control>();
+    private final Collection<Control> controls1 = new ArrayList<Control>();
+    private final Collection<Control> controls2 = new ArrayList<Control>();
 
-	/**
-	 * PrintOutWizardPage constructor, must be called by DI.
-	 *
-	 */
-	public PrintOutWizardPage() {
-		super("PrintOutWizardPage"); //$NON-NLS-1$
-		setTitle(
-		        RelationsMessages.getString("PrintOutWizardPage.dialog.title")); //$NON-NLS-1$
-		settings = new DialogSettingHandler(DIALOG_SECTION, DIALOG_TERM);
-	}
+    /**
+     * PrintOutWizardPage constructor, must be called by DI.
+     *
+     */
+    public PrintOutWizardPage() {
+        super("PrintOutWizardPage"); //$NON-NLS-1$
+        setTitle(
+                RelationsMessages.getString("PrintOutWizardPage.dialog.title")); //$NON-NLS-1$
+        this.settings = new DialogSettingHandler(DIALOG_SECTION, DIALOG_TERM);
+    }
 
-	@Override
-	public void createControl(final Composite inParent) {
-		final int lColumns = 3;
-		// inParent.setLayout(new GridLayout());
-		final Composite lComposite = WizardHelper.createComposite(inParent,
-		        lColumns);
+    @Override
+    public void createControl(final Composite inParent) {
+        final int lColumns = 3;
+        // inParent.setLayout(new GridLayout());
+        final Composite lComposite = WizardHelper.createComposite(inParent,
+                lColumns);
 
-		controls1.addAll(createAppendOrNew(lComposite));
+        this.controls1.addAll(createAppendOrNew(lComposite));
 
-		printType = createComboPrintType(lComposite);
+        this.printType = createComboPrintType(lComposite);
 
-		printFileName = createLabelCombo(lComposite,
-		        RelationsMessages.getString("PrintOutWizardPage.lbl.file"), //$NON-NLS-1$
-		        SWT.DROP_DOWN);
+        this.printFileName = createLabelCombo(lComposite,
+                RelationsMessages.getString("PrintOutWizardPage.lbl.file"), //$NON-NLS-1$
+                SWT.DROP_DOWN);
 
-		controls2.add(createButtonFileDialog(lComposite,
-		        RelationsMessages.getString("PrintOutWizardPage.lbl.browse"))); //$NON-NLS-1$
+        this.controls2.add(createButtonFileDialog(lComposite,
+                RelationsMessages.getString("PrintOutWizardPage.lbl.browse"))); //$NON-NLS-1$
 
-		controls2.addAll(createPrintOutScope(lComposite));
+        this.controls2.addAll(createPrintOutScope(lComposite));
 
-		printOutReferences = createLayoutCheckbox(lComposite);
+        this.printOutReferences = createLayoutCheckbox(lComposite);
 
-		controls2.add(printType);
-		controls2.add(printFileName);
-		controls2.add(printOutReferences);
+        this.controls2.add(this.printType);
+        this.controls2.add(this.printFileName);
+        this.controls2.add(this.printOutReferences);
 
-		setControl(lComposite);
-		initializeValues();
-	}
+        setControl(lComposite);
+        initializeValues();
+    }
 
-	private Collection<Control> createAppendOrNew(final Composite inParent) {
-		new Label(inParent, SWT.NULL);
+    private Collection<Control> createAppendOrNew(final Composite inParent) {
+        new Label(inParent, SWT.NULL);
 
-		final Composite lSelectionPane = new Composite(inParent, SWT.NONE);
-		final GridData lData = new GridData(SWT.FILL, SWT.CENTER, true, false);
-		lData.horizontalSpan = 2;
-		lSelectionPane.setLayoutData(lData);
-		lSelectionPane.setLayout(new RowLayout(SWT.VERTICAL));
+        final Composite lSelectionPane = new Composite(inParent, SWT.NONE);
+        final GridData lData = new GridData(SWT.FILL, SWT.CENTER, true, false);
+        lData.horizontalSpan = 2;
+        lSelectionPane.setLayoutData(lData);
+        lSelectionPane.setLayout(new RowLayout(SWT.VERTICAL));
 
-		return createRadios(lSelectionPane, radioProcessIds, radioProcessLabels,
-		        PROCESS_APPEND, new ProcessSelectionListener());
-	}
+        return createRadios(lSelectionPane, radioProcessIds, radioProcessLabels,
+                PROCESS_APPEND, new ProcessSelectionListener());
+    }
 
-	private Combo createComboPrintType(final Composite inParent) {
-		final Combo outCombo = createLabelCombo(inParent,
-		        RelationsMessages.getString("PrintOutWizardPage.lbl.type"), //$NON-NLS-1$
-		        SWT.READ_ONLY);
-		new Label(inParent, SWT.NONE);
-		return outCombo;
-	}
+    private Combo createComboPrintType(final Composite inParent) {
+        final Combo outCombo = createLabelCombo(inParent,
+                RelationsMessages.getString("PrintOutWizardPage.lbl.type"), //$NON-NLS-1$
+                SWT.READ_ONLY);
+        new Label(inParent, SWT.NONE);
+        return outCombo;
+    }
 
-	@Override
-	protected void openFileDialog() {
-		fileNameStatus = Status.OK_STATUS;
-		printManager.setSelected(printType.getSelectionIndex());
-		final FileDialog lDialog = new FileDialog(
-		        Display.getCurrent().getActiveShell(), SWT.SAVE);
-		lDialog.setText(
-		        RelationsMessages.getString("PrintOutWizardPage.lbl.dialog")); //$NON-NLS-1$
-		lDialog.setFilterExtensions(printManager.getFilterExtensions());
-		lDialog.setFilterNames(printManager.getFilterNames());
-		final String lFileName = lDialog.open();
-		if (lFileName == null) {
-			fileNameStatus = nameEmpty;
-		} else {
-			printFileName.setText(lFileName);
-			checkFileExists(lFileName);
-		}
-		updateStatus(fileNameStatus);
-		printFileName.setFocus();
-	}
+    @Override
+    protected void openFileDialog() {
+        this.fileNameStatus = Status.OK_STATUS;
+        this.printManager.setSelected(this.printType.getSelectionIndex());
+        final FileDialog lDialog = new FileDialog(
+                Display.getCurrent().getActiveShell(), SWT.SAVE);
+        lDialog.setText(
+                RelationsMessages.getString("PrintOutWizardPage.lbl.dialog")); //$NON-NLS-1$
+        lDialog.setFilterExtensions(this.printManager.getFilterExtensions());
+        lDialog.setFilterNames(this.printManager.getFilterNames());
+        final String lFileName = lDialog.open();
+        if (lFileName == null) {
+            this.fileNameStatus = this.nameEmpty;
+        } else {
+            this.printFileName.setText(lFileName);
+            checkFileExists(lFileName);
+        }
+        updateStatus(this.fileNameStatus);
+        this.printFileName.setFocus();
+    }
 
-	private Collection<Control> createPrintOutScope(final Composite inParent) {
-		final Label lSelectionLabel = new Label(inParent, SWT.NONE);
-		lSelectionLabel
-		        .setLayoutData(new GridData(SWT.FILL, SWT.TOP, false, false));
-		lSelectionLabel.setText(RelationsMessages
-		        .getString("PrintOutWizardPage.lbl.selection")); //$NON-NLS-1$
+    private Collection<Control> createPrintOutScope(final Composite inParent) {
+        final Label lSelectionLabel = new Label(inParent, SWT.NONE);
+        lSelectionLabel
+        .setLayoutData(new GridData(SWT.FILL, SWT.TOP, false, false));
+        lSelectionLabel.setText(RelationsMessages
+                .getString("PrintOutWizardPage.lbl.selection")); //$NON-NLS-1$
 
-		final Composite lSelectionPane = new Composite(inParent, SWT.NONE);
-		lSelectionPane.setLayout(new RowLayout(SWT.VERTICAL));
-		final Collection<Control> outRadios = createRadios(lSelectionPane,
-		        radioScopeIDs, radioScopeLabels,
-		        printOutManager.getContentSope(), new SetSelectionListener());
+        final Composite lSelectionPane = new Composite(inParent, SWT.NONE);
+        lSelectionPane.setLayout(new RowLayout(SWT.VERTICAL));
+        final Collection<Control> outRadios = createRadios(lSelectionPane,
+                radioScopeIDs, radioScopeLabels,
+                this.printOutManager.getContentSope(), new SetSelectionListener());
 
-		new Label(inParent, SWT.NONE);
-		return outRadios;
-	}
+        new Label(inParent, SWT.NONE);
+        return outRadios;
+    }
 
-	private Button createLayoutCheckbox(final Composite inParent) {
-		final Label lCheckboxLabel = new Label(inParent, SWT.NONE);
-		lCheckboxLabel.setText(
-		        RelationsMessages.getString("PrintOutWizardPage.lbl.output")); //$NON-NLS-1$
+    private Button createLayoutCheckbox(final Composite inParent) {
+        final Label lCheckboxLabel = new Label(inParent, SWT.NONE);
+        lCheckboxLabel.setText(
+                RelationsMessages.getString("PrintOutWizardPage.lbl.output")); //$NON-NLS-1$
 
-		final Button outButton = new Button(inParent, SWT.CHECK);
-		outButton.setText(RelationsMessages
-		        .getString("PrintOutWizardPage.lbl.paragrahp")); //$NON-NLS-1$
+        final Button outButton = new Button(inParent, SWT.CHECK);
+        outButton.setText(RelationsMessages
+                .getString("PrintOutWizardPage.lbl.paragrahp")); //$NON-NLS-1$
 
-		final GridData lData = new GridData(SWT.FILL, SWT.CENTER, true, false);
-		lData.horizontalSpan = 2;
-		outButton.setLayoutData(lData);
-		return outButton;
-	}
+        final GridData lData = new GridData(SWT.FILL, SWT.CENTER, true, false);
+        lData.horizontalSpan = 2;
+        outButton.setLayoutData(lData);
+        return outButton;
+    }
 
-	private void initializeValues() {
-		printType.setItems(printManager.getTextProcessorNames());
-		printType.select(printManager.getSelected());
+    private void initializeValues() {
+        this.printType.setItems(this.printManager.getTextProcessorNames());
+        this.printType.select(this.printManager.getSelected());
 
-		final String[] lRecentValues = settings.getRecentValues();
-		if (lRecentValues.length > 0) {
-			actualFileName = lRecentValues[0];
-		}
-		printFileName.setItems(lRecentValues);
+        final String[] lRecentValues = this.settings.getRecentValues();
+        if (lRecentValues.length > 0) {
+            this.actualFileName = lRecentValues[0];
+        }
+        this.printFileName.setItems(lRecentValues);
 
-		printOutReferences
-		        .setSelection(printOutManager.getPrintOutReferences());
-		selectedScope = printOutManager.getContentSope();
+        this.printOutReferences
+        .setSelection(this.printOutManager.getPrintOutReferences());
+        this.selectedScope = this.printOutManager.getContentSope();
 
-		if (printOutManager.isPrinting()) {
-			widgetEnablementSwitch(false);
-			printFileName.setText(actualFileName);
-			setMessage(null);
-			setPageComplete(true);
-		} else {
-			selectedProcess = PROCESS_NEW;
-			widgetVisible(false);
-			setPageComplete(false);
-		}
+        if (this.printOutManager.isPrinting()) {
+            widgetEnablementSwitch(false);
+            this.printFileName.setText(this.actualFileName);
+            setMessage(null);
+            setPageComplete(true);
+        } else {
+            this.selectedProcess = PROCESS_NEW;
+            widgetVisible(false);
+            setPageComplete(false);
+        }
 
-		addListeners(printFileName);
-		printFileName.setFocus();
-	}
+        addListeners(this.printFileName);
+        this.printFileName.setFocus();
+    }
 
-	@Override
-	protected void focusGainedCheck(final String inText) {
-		if (fileNameStatus == null) {
-			fileNameStatus = Status.OK_STATUS;
-		} else {
-			if (fileNameStatus.getCode() != STATUS_FILE_EXISTS) {
-				fileNameStatus = Status.OK_STATUS;
-			}
-		}
-	}
+    @Override
+    protected void focusGainedCheck(final String inText) {
+        if (this.fileNameStatus == null) {
+            this.fileNameStatus = Status.OK_STATUS;
+        } else {
+            if (this.fileNameStatus.getCode() != STATUS_FILE_EXISTS) {
+                this.fileNameStatus = Status.OK_STATUS;
+            }
+        }
+    }
 
-	@Override
-	protected void focusLostCheck(final String inText) {
-		checkFileExists(inText, nameFileExists);
-	}
+    @Override
+    protected void focusLostCheck(final String inText) {
+        checkFileExists(inText, this.nameFileExists);
+    }
 
-	@Override
-	protected void modifiedCheck(final String inText) {
-		checkFileExists(inText, nameFileExists);
-	}
+    @Override
+    protected void modifiedCheck(final String inText) {
+        checkFileExists(inText, this.nameFileExists);
+    }
 
-	@Override
-	protected void checkFileExists(final String inFileName,
-	        final IStatus inStatusIfExists) {
-		super.checkFileExists(inFileName, inStatusIfExists);
+    @Override
+    protected void checkFileExists(final String inFileName,
+            final IStatus inStatusIfExists) {
+        super.checkFileExists(inFileName, inStatusIfExists);
 
-		if (!fileNameStatus.isOK()) {
-			return;
-		}
-		if (inFileName.length() == 0) {
-			fileNameStatus = nameEmpty;
-			return;
-		}
-	}
+        if (!this.fileNameStatus.isOK()) {
+            return;
+        }
+        if (inFileName.length() == 0) {
+            this.fileNameStatus = this.nameEmpty;
+            return;
+        }
+    }
 
-	private Collection<Control> createRadios(final Composite inParent,
-	        final Integer[] inIds, final String[] inLabels, final int inDefault,
-	        final SelectionListener inListener) {
-		final Collection<Control> outRadios = new ArrayList<Control>();
-		for (int i = 0; i < inIds.length; i++) {
-			final Button lButton = new Button(inParent, SWT.RADIO);
-			lButton.setData(inIds[i]);
-			lButton.setText(inLabels[i]);
-			lButton.setSelection(i == inDefault);
-			lButton.addSelectionListener(inListener);
-			outRadios.add(lButton);
-		}
-		return outRadios;
-	}
+    private Collection<Control> createRadios(final Composite inParent,
+            final Integer[] inIds, final String[] inLabels, final int inDefault,
+            final SelectionListener inListener) {
+        final Collection<Control> outRadios = new ArrayList<Control>();
+        for (int i = 0; i < inIds.length; i++) {
+            final Button lButton = new Button(inParent, SWT.RADIO);
+            lButton.setData(inIds[i]);
+            lButton.setText(inLabels[i]);
+            lButton.setSelection(i == inDefault);
+            lButton.addSelectionListener(inListener);
+            outRadios.add(lButton);
+        }
+        return outRadios;
+    }
 
-	/**
-	 * @return IPrintOut the selected print out plug-in.
-	 */
-	public IPrintOut getSelectedPrintOut() {
-		printManager.setSelected(printType.getSelectionIndex());
-		return printManager.getSelectedPrinter();
-	}
+    /**
+     * @return IPrintOut the selected print out plug-in.
+     */
+    public IPrintOut getSelectedPrintOut() {
+        this.printManager.setSelected(this.printType.getSelectionIndex());
+        return this.printManager.getSelectedPrinter();
+    }
 
-	/**
-	 * @return String name of the file to print out the selected set of items.
-	 */
-	public String getFileName() {
-		return printFileName.getText();
-	}
+    /**
+     * @return String name of the file to print out the selected set of items.
+     */
+    public String getFileName() {
+        return this.printFileName.getText();
+    }
 
-	/**
-	 * Returns a constant denoting the scope of items to be printed out
-	 *
-	 * @return int constant, e.g. <code>SELECTED_RELATED</code>
-	 */
-	public int getPrintOutScope() {
-		return selectedScope;
-	}
+    /**
+     * Returns a constant denoting the scope of items to be printed out
+     *
+     * @return int constant, e.g. <code>SELECTED_RELATED</code>
+     */
+    public int getPrintOutScope() {
+        return this.selectedScope;
+    }
 
-	/**
-	 * Friendly method to save the value entered in <code>printFileName</code>
-	 * to the dialog's history.
-	 */
-	void saveToHistory() {
-		try {
-			settings.saveToHistory(printFileName.getText());
-			preferences.put(RelationsConstants.KEY_PRINT_OUT_PLUGIN_ID,
-			        FrameworkUtil.getBundle(getSelectedPrintOut().getClass())
-			                .getSymbolicName());
-		}
-		catch (final BackingStoreException exc) {
-			log.error(exc, exc.getMessage());
-		}
-	}
+    /**
+     * Friendly method to save the value entered in <code>printFileName</code>
+     * to the dialog's history.
+     */
+    void saveToHistory() {
+        try {
+            this.settings.saveToHistory(this.printFileName.getText());
+            this.preferences.put(RelationsConstants.KEY_PRINT_OUT_PLUGIN_ID,
+                    FrameworkUtil.getBundle(getSelectedPrintOut().getClass())
+                    .getSymbolicName());
+        }
+        catch (final BackingStoreException exc) {
+            this.log.error(exc, exc.getMessage());
+        }
+    }
 
-	private void widgetEnablementSwitch(final boolean inEnable) {
-		for (final Control lControl : controls2) {
-			lControl.setEnabled(inEnable);
-		}
-	}
+    private void widgetEnablementSwitch(final boolean inEnable) {
+        for (final Control lControl : this.controls2) {
+            lControl.setEnabled(inEnable);
+        }
+    }
 
-	private void widgetVisible(final boolean inVisible) {
-		for (final Control lControl : controls1) {
-			lControl.setVisible(inVisible);
-		}
-	}
+    private void widgetVisible(final boolean inVisible) {
+        for (final Control lControl : this.controls1) {
+            lControl.setVisible(inVisible);
+        }
+    }
 
-	/**
-	 * Tells whether the user selected a new print out or chooses to proceed
-	 * with a print out already set up.
-	 *
-	 * @return boolean <code>true</code> if the user selected the
-	 *         <code>PROCESS_NEW</code> process.
-	 */
-	public boolean isInitNew() {
-		return selectedProcess == PROCESS_NEW;
-	}
+    /**
+     * Tells whether the user selected a new print out or chooses to proceed
+     * with a print out already set up.
+     *
+     * @return boolean <code>true</code> if the user selected the
+     *         <code>PROCESS_NEW</code> process.
+     */
+    public boolean isInitNew() {
+        return this.selectedProcess == PROCESS_NEW;
+    }
 
-	/**
-	 * Returns the value of the printOutReferences checkbox.
-	 *
-	 * @return boolean <code>true</code> if checkbox is selected, i.e. the
-	 *         item's references have to be printed out.
-	 */
-	public boolean getPrintOutReferences() {
-		return printOutReferences.getSelection();
-	}
+    /**
+     * Returns the value of the printOutReferences checkbox.
+     *
+     * @return boolean <code>true</code> if checkbox is selected, i.e. the
+     *         item's references have to be printed out.
+     */
+    public boolean getPrintOutReferences() {
+        return this.printOutReferences.getSelection();
+    }
 
-	@Override
-	protected boolean getPageComplete() {
-		if (printFileName.getText().length() == 0) {
-			return false;
-		}
-		return true;
-	}
+    @Override
+    protected boolean getPageComplete() {
+        if (this.printFileName.getText().length() == 0) {
+            return false;
+        }
+        return true;
+    }
 
-	// --- inner classes ---
+    // --- inner classes ---
 
-	private class SetSelectionListener extends SelectionAdapter {
-		@Override
-		public void widgetSelected(final SelectionEvent inEvent) {
-			if (((Button) inEvent.widget).getSelection()) {
-				selectedScope = ((Integer) inEvent.widget.getData()).intValue();
-			}
-		}
-	}
+    private class SetSelectionListener extends SelectionAdapter {
+        @Override
+        public void widgetSelected(final SelectionEvent inEvent) {
+            if (((Button) inEvent.widget).getSelection()) {
+                PrintOutWizardPage.this.selectedScope = ((Integer) inEvent.widget.getData()).intValue();
+            }
+        }
+    }
 
-	private class ProcessSelectionListener extends SelectionAdapter {
-		@Override
-		public void widgetSelected(final SelectionEvent inEvent) {
-			if (((Button) inEvent.widget).getSelection()) {
-				selectedProcess = ((Integer) inEvent.widget.getData())
-				        .intValue();
-				final boolean lNewPrintOut = selectedProcess == PROCESS_NEW;
-				widgetEnablementSwitch(lNewPrintOut);
-				if (lNewPrintOut) {
-					checkFileExists(printFileName.getText());
-				} else {
-					printFileName.setText(actualFileName);
-					fileNameStatus = Status.OK_STATUS;
-				}
-				updateStatus(fileNameStatus);
-			}
-		}
-	}
+    private class ProcessSelectionListener extends SelectionAdapter {
+        @Override
+        public void widgetSelected(final SelectionEvent inEvent) {
+            if (((Button) inEvent.widget).getSelection()) {
+                PrintOutWizardPage.this.selectedProcess = ((Integer) inEvent.widget.getData())
+                        .intValue();
+                final boolean lNewPrintOut = PrintOutWizardPage.this.selectedProcess == PROCESS_NEW;
+                widgetEnablementSwitch(lNewPrintOut);
+                if (lNewPrintOut) {
+                    checkFileExists(PrintOutWizardPage.this.printFileName.getText());
+                } else {
+                    PrintOutWizardPage.this.printFileName.setText(PrintOutWizardPage.this.actualFileName);
+                    PrintOutWizardPage.this.fileNameStatus = Status.OK_STATUS;
+                }
+                updateStatus(PrintOutWizardPage.this.fileNameStatus);
+            }
+        }
+    }
 
 }
